syntax = "proto3";

package file;

option go_package = "./pb";

message ListFilesRequest {}
message ListFilesResponse {
  repeated string filename = 1;
}

message DownloadRequest {
  string filename = 1;
}
message DonwloadResponse {
  bytes data = 1;
}

message UploadRequest {
  bytes data = 1;
}
message UploadResponse {
  int32 size = 1;
}

message UploadAndNotifyProgressRequest {
  bytes data = 1;
}
message UploadAndNotifyProgressResponse {
  string msg = 1;
}

service FileService {
  // Unary RPC
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);

  // Server streaming RPC
  rpc Download (DownloadRequest) returns (stream DonwloadResponse);

  // Client streaming RPC
  rpc Upload (stream UploadRequest) returns (UploadResponse);

  // 双方向 streaming RPC
  rpc UploadAndNotifyProgress (stream UploadAndNotifyProgressRequest) returns (stream UploadAndNotifyProgressResponse);
}
